disable the cloud selector

--- a/stac2/views/index.haml
+++ b/stac2/views/index.haml
@@ -50,7 +50,7 @@
 
             %tr.combo_control_row
               %td{:colspan =>2, :class => 'combo_control_row'}
-                %select{:id=>'cloud_selector'}
+                %select{:id=>'cloud_selector', :disabled=>'disabled'}
 
 
         %td.mcw_center
