--- a/stac2/views/shared_css.haml
+++ b/stac2/views/shared_css.haml
@@ -507,6 +507,10 @@
         font-weight: normal
         padding: 1px
 
+      #cloud_selector
+        color: #000000
+        -webkit-appearance: none
+
       table.load_table
         border-spacing: 0px
         width: 100%
