--- a/stac2/views/shared_footer.haml
+++ b/stac2/views/shared_footer.haml
@@ -1,3 +1,4 @@
+-# Copyright (c) 2009-2013 VMware, Inc.
 %span#loginclicker powered by
 %a{ :href => "http://www.vmware.com", :target => '_blank'}vmware.com
 
