--- a/stac2/views/shared_head.haml
+++ b/stac2/views/shared_head.haml
@@ -1,3 +1,4 @@
+-# Copyright (c) 2009-2013 VMware, Inc.
 %head
   %title stac2
   %meta(http-equiv='content-type' content='text/html charset=utf-8')
