--- a/stac2/views/showlog.haml
+++ b/stac2/views/showlog.haml
@@ -1,3 +1,4 @@
+-# Copyright (c) 2009-2013 VMware, Inc.
 #center
   %img{:id=>"xlogo", :class=>"logo", :src=>"/img/cloudfoundry-logo-ltblu-650x100.png"}
 
