--- a/stac2/views/email_plain.haml
+++ b/stac2/views/email_plain.haml
@@ -1,3 +1,4 @@
+-# Copyright (c) 2009-2013 VMware, Inc.
 -def nwd(number)
   - parts = number.to_s.split('.')
   - parts[0].gsub!(/(\d)(?=(\d\d\d)+(?!\d))/, "\\1,")
