--- a/stac2/views/layout.haml
+++ b/stac2/views/layout.haml
@@ -1,3 +1,4 @@
+-# Copyright (c) 2009-2013 VMware, Inc.
 !!! Strict
 %html(xmlns='http://www.w3.org/1999/xhtml')
   =haml :shared_head, :layout => false
