--- a/stac2/views/shared_jslibs.haml
+++ b/stac2/views/shared_jslibs.haml
@@ -1,3 +1,4 @@
+-# Copyright (c) 2009-2013 VMware, Inc.
 %link(href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css")
 %script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
 %script(type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js")
