port enumApps (aka cleanup) to v2

--- a/stac2/views/index.haml
+++ b/stac2/views/index.haml
@@ -143,14 +143,17 @@
         #email
           %button{:class => 'email_button', :id => 'email_button'} email
         #users
-          %span.label dirty users
+          %span.label users
           %span{:class => 'count', :id => "dirty_users"}
 
-          %span.label dirty apps
+          %span.label apps
           %span{:class => 'count', :id => "dirty_apps"}
 
-          %span.label dirty services
+          %span.label services
           %span{:class => 'count', :id => "dirty_services"}
+
+          %span.label spaces
+          %span{:class => 'count', :id => "dirty_spaces"}
 
           %button{:class => 'dismiss_button', :id => 'dismiss_button'} dismiss
 
