Use cf instead of vmc.

--- a/stac2/views/shared_stats_js.haml
+++ b/stac2/views/shared_stats_js.haml
@@ -406,7 +406,7 @@
 
       // update the activity cells
       var MAX = "#{$lights}"
-      var active = s['stats']['vmc_active_workers']
+      var active = s['stats']['cf_active_workers']
       clear_activity_lights(MAX);
       set_activity_lights(active, MAX);
 
