--- a/stac2/views/showlog.haml
+++ b/stac2/views/showlog.haml
@@ -22,7 +22,7 @@
           #{l['action']}
       %tr.data_row
         %td.label
-          vmc exception:
+          cf exception:
         %td.value
           #{l['e']}
       %tr.data_row
